tests/fixtures/valid/set/set_bool.py
# Set of bools
bools: set[bool] = {True, False}

print(len(bools))
print(True in bools)
print(False in bools)
