tests/fixtures/invalid/dict_ge_bool.py
# Cannot compare with >= Dict[str, int] and Bool
x: bool = {"a": 1} >= True
